# cs.canonical.com

./: .commitlintrc.json  .dockerignore  .env  .gitignore  .releaserc  Dockerfile  MOCK_SERVER_USAGE.md  README.md  TEMP_releases.yaml  Taskfile.yml  app.py  commitlint.config.ts  docker-compose.yml  entrypoint  package.json  playwright.config.ts  pyproject.toml  requirements.txt  rockcraft.yaml  setupTests.ts  tsconfig.json  vite.config.ts
.github/workflows/: CI.yml  deploy.yaml  pack-charm.yaml  playwright.yml  pr.yaml  release.yaml
charm/: charmcraft.yaml  cs.yaml
charm/src/: charm.py
data/: sites.yaml
konf/: data.yaml  site.yaml
migrations/versions/: 0ab7839e4412_.py  14729444f282_.py  1b6109065dba_.py  1d1c609b8c23_merged_multiple_heads.py  2e86822886aa_add_ext_to_webpages.py  3d5b62292e65_.py  636e244e00ea_.py  68ab742ccfbe_add_file_path_to_webpage.py  94be817851ab_add_figma_link_to_webpage.py  a1ccbb13c228_.py  ac63c9eebbec_adding_request_type_to_jira_task_model.py  b8bc4f2fc314_add_content_jira_id_to_webpage.py  edb49aee1ab4_.py
scripts/: update-version.sh
static/client/: App.scss  App.tsx  global.d.ts  main.test.tsx
templates/: base.html  login.html
tests/: auth.spec.ts  config.ts  helpers.ts  index.spec.ts  project.spec.ts
tests/utils/: common.ts
tests/views/: table-view.spec.ts
webapp/: __init__.py  app.py  cache.py  celery.py  context.py  gdrive.py  github.py  helper.py  jira.py  migrate.py  models.py  parse_tree.py  releases_manager.py  scheduled_tasks.py  schemas.py  settings.py  site_repository.py  sso.py  tasklib.py  tasks.py
(+246 files in other folders)
