[project]
name = "cs-canonical-com"
version = "0.0.1"
requires-python = ">=3.12"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
exclude = ["charm"]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

[tool.ruff.lint.per-file-ignores]
"webapp/tests/test_gdrive.py" = ["F401", "F811"]

[tool.setuptools]
py-modules = []